--- a/src/AppBundle/Resources/views/admin/index.html.twig
+++ b/src/AppBundle/Resources/views/admin/index.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <p>hello!</p>
+    <div ng-app="fridge">
+        {#<p>hello!</p>#}
+    </div>
 {% endblock %}
