--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,17 +1,21 @@
 {% extends '::base.html.twig' %}
 
 {% block header %}
-    <nav class="navbar navbar-fixed-top navbar-light bg-faded">
+    <nav class="navbar navbar-light bg-faded">
         <a class="navbar-brand" href="/">
             <img src="{{ asset('img/logo.png') }}" alt="Home">
         </a>
+        {% if app.user %}
+            <p class="pull-right">{{ app.user.name }}</p>
+        {% endif %}
+        <ul>
+            {% if app.user %}
+                <li><a href="{{ logout_path("main") }}">Logout</a></li>
+            {% else %}
+                <li><a href="{{ path("login") }}">Login</a></li>
+            {% endif %}
+        </ul>
     </nav>
-
-    {#{% if app.user %}#}
-        {#<li><a href="{{ logout_path("main") }}">Logout</a></li>#}
-    {#{% else %}#}
-        {#<li><a href="{{ path("login") }}">Login</a></li>#}
-    {#{% endif %}#}
 {% endblock header %}
 
 {% block content %}{% endblock content %}
