--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,20 +1,34 @@
 {% extends '::base.html.twig' %}
 
 {% block header %}
-    <nav class="navbar navbar-light bg-faded">
-        <a class="navbar-brand" href="/">
+    <nav class="navbar navbar-full navbar-light bg-faded">
+        <a class="navbar-brand" href="{{ path('homepage') }}">
             <img src="{{ asset('img/logo.png') }}" alt="Home">
         </a>
-        {% if app.user %}
-            <p class="pull-right">{{ app.user.name }}</p>
-        {% endif %}
-        <ul>
-            {% if app.user %}
-                <li><a href="{{ logout_path("main") }}">Logout</a></li>
-            {% else %}
-                <li><a href="{{ path("login") }}">Login</a></li>
-            {% endif %}
+        <ul class="nav navbar-nav">
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Features</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+            </li>
         </ul>
+        <div class="sign-i pull-right">
+            {% if app.user %}
+                <a class="sign-in-link" href="{{ logout_path("main") }}">Logout</a>
+            {% else %}
+                <a class="sign-in-link" href="{{ path("login") }}">Login</a>
+            {% endif %}
+            {% if app.user %}
+                |<span>{{ app.user.name }}</span>
+            {% endif %}
+        </div>
     </nav>
 {% endblock header %}
 
@@ -23,12 +37,10 @@
 
 {% block body %}
     <header>
-        <div class="container">
-            {{ block('header') }}
-        </div>
+        {{ block('header') }}
     </header>
 
-    <div role="main" class="content-wr container">
+    <div role="main" class="content-wr">
         {{ block('content') }}
     </div>
 
