changed bootstrap version(3.3.7 now), updated layout, start working on ShelfController

--- a/src/AppBundle/Resources/views/Shelf/form.html.twig
+++ b/src/AppBundle/Resources/views/Shelf/form.html.twig
@@ -1,7 +1,7 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    {{ form_start(form, {'attr': {'class': 'category-form'} }) }}
+    {{ form_start(form, {'attr': {'class': 'shelf-form'} }) }}
         {{ form_widget(form) }}
     {{ form_end(form) }}
 {% endblock content %}
