--- a/web-src/sass/_variables.scss
+++ b/web-src/sass/_variables.scss
@@ -1,7 +1,4 @@
 $font0: Arial, Helvetica, sans-serif;
 $font1: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
-$bp-sm: 34em;
-$bp-md: 48em;
-$bp-lg: 62em;
-$bp-xl: 75em;
+$hdr-height: 143px;
