--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -1,33 +1,47 @@
 {% extends '::base.html.twig' %}
 
 {% block header %}
-    <nav class="navbar navbar-full navbar-light bg-faded">
-        <a class="navbar-brand" href="{{ path('homepage') }}">
-            <img src="{{ asset('img/logo.png') }}" alt="Home">
-        </a>
-        <ul class="nav navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
-            </li>
-        </ul>
-        <div class="sign-i pull-right">
-            {% if app.user %}
-                <a class="sign-in-link" href="{{ logout_path("main") }}">Logout</a>
-            {% else %}
-                <a class="sign-in-link" href="{{ path("login") }}">Login</a>
-            {% endif %}
-            {% if app.user %}
-                |<span>{{ app.user.name }}</span>
-            {% endif %}
+    <nav class="navbar navbar-full navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="{{ path('homepage') }}">
+                    <img src="{{ asset('img/logo.png') }}" alt="Home">
+                </a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
+                <div class="menu-wr">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Features</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="sign-in pull-right">
+                    {% if app.user %}
+                        <a class="sign-in-link" href="{{ logout_path("main") }}">Logout</a>
+                    {% else %}
+                        <a class="sign-in-link" href="{{ path("login") }}">Login</a>
+                    {% endif %}
+                    {% if app.user %}
+                        |<span>{{ app.user.name }}</span>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </nav>
 {% endblock header %}
@@ -40,8 +54,10 @@
         {{ block('header') }}
     </header>
 
-    <div role="main" class="content-wr">
-        {{ block('content') }}
+    <div class="content-wr">
+        <div class="container-fluid">
+            {{ block('content') }}
+        </div>
     </div>
 
     <footer>
