--- a/web-src/sass/styles.scss
+++ b/web-src/sass/styles.scss
@@ -1,12 +1,17 @@
 @import "variables";
 @import "mixins";
 
-.navbar-nav {
-  .nav-item {
-    float: left;
-  }
+.navbar-brand {
+  height: $hdr-height;
 }
 
+.content-wr {
+  margin-top: $hdr-height;
+}
+
+.menu-wr {
+  overflow: hidden;
+}
 body {
   //@include breakpoint($bp-sm) {
   //  background-color: #9fdf9f !important;
