--- a/src/AppBundle/Resources/views/Shelf/index.html.twig
+++ b/src/AppBundle/Resources/views/Shelf/index.html.twig
@@ -5,4 +5,39 @@
     <div class="actions">
         <a href="{{ path('shelf_new') }}" class="btn btn-primary">Create</a>
     </div>
+    <div class="table-responsive">
+        <table class="table table-striped">
+            <thead>
+                <tr>
+                    <th></th>
+                    <th>#</th>
+                    <th>name</th>
+                    <th>created at</th>
+                    <th>updated at</th>
+                    <th>created by</th>
+                    <th>updated by</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for shelf in shelves %}
+                <tr>
+                    <td>
+                        <a href="{{ path('shelf_edit', {id: shelf.id}) }}">
+                            <span class="glyphicon glyphicon-edit glyphicon-align-left" aria-hidden="true"></span>
+                        </a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-floppy-remove glyphicon-align-left" aria-hidden="true"></span>
+                        </a>
+                    </td>
+                    <td>{{ shelf.id }}</td>
+                    <td>{{ shelf.name }}</td>
+                    <td>{{ shelf.createdAt | date('Y-m-d H:i') }}</td>
+                    <td>{{ shelf.updatedAt | date('Y-m-d H:i') }}</td>
+                    <td>{{ shelf.createdBy.name }}</td>
+                    <td>{{ shelf.updatedBy.name }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock content %}
