--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -17,17 +17,19 @@
             <div id="navbar" class="navbar-collapse collapse" aria-expanded="false" style="height: 1px;">
                 <div class="menu-wr">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <li>
+                            <a href="{{ path('homepage') }}">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Features</a>
+                        {% if is_granted('ROLE_SUPERADMIN') %}
+                            <li>
+                                <a href="{{ path('shelves_index') }}">Shelves</a>
+                            </li>
+                        {% endif %}
+                        <li>
+                            <a href="{{ path('foods_index') }}">Foods</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Pricing</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
+                        <li>
+                            <a href="{{ path('categories_index') }}">Categories</a>
                         </li>
                     </ul>
                 </div>
@@ -38,7 +40,7 @@
                         <a class="sign-in-link" href="{{ path("login") }}">Login</a>
                     {% endif %}
                     {% if app.user %}
-                        |<span>{{ app.user.name }}</span>
+                        | <span>{{ app.user.name }}</span>
                     {% endif %}
                 </div>
             </div>
