--- a/web-src/css/styles.css
+++ b/web-src/css/styles.css
@@ -7,8 +7,20 @@
 .menu-wr {
   overflow: hidden; }
 
+.page-header {
+  margin: 0 0 20px; }
+
 .actions {
   margin: 0 0 15px; }
 
+.ico-btn {
+  margin-right: 5px; }
+
 .glyphicon.glyphicon-floppy-remove {
-  color: #d9534f; }
+  color: #d9534f;
+  background: none; }
+
+button.glyphicon {
+  border: none;
+  padding: 0;
+  outline: 0; }
