--- a/src/AppBundle/Resources/views/Shelf/index.html.twig
+++ b/src/AppBundle/Resources/views/Shelf/index.html.twig
@@ -22,12 +22,10 @@
             {% for shelf in shelves %}
                 <tr>
                     <td>
-                        <a href="{{ path('shelf_edit', {id: shelf.id}) }}">
+                        <a class="ico-btn" href="{{ path('shelf_edit', {id: shelf.id}) }}">
                             <span class="glyphicon glyphicon-edit glyphicon-align-left" aria-hidden="true"></span>
                         </a>
-                        <a href="#">
-                            <span class="glyphicon glyphicon-floppy-remove glyphicon-align-left" aria-hidden="true"></span>
-                        </a>
+                        {{ render(controller('AppBundle:Shelf:delete', {'id': shelf.id})) }}
                     </td>
                     <td>{{ shelf.id }}</td>
                     <td>{{ shelf.name }}</td>
