removed migrations and fixed login form error rendering

--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
     <div class="container">
         {% if error %}
             <div class="alert alert-danger" role="alert">
-                {{ error.messageData }}
+                {{ error.message }}
             </div>
         {% endif %}
 
