--- a/src/AppBundle/Resources/views/User/form.html.twig
+++ b/src/AppBundle/Resources/views/User/form.html.twig
@@ -7,5 +7,6 @@
     </div>
     {{ form_start(form, {'attr': {'class': 'user-form'} }) }}
         {{ form_widget(form) }}
+        <button type="submit" class="btn btn-success">Save</button>
     {{ form_end(form) }}
 {% endblock content %}
