--- a/src/AppBundle/Resources/views/User/index.html.twig
+++ b/src/AppBundle/Resources/views/User/index.html.twig
@@ -20,10 +20,10 @@
             {% for user in users %}
                 <tr>
                     <td>
-                        {#<a class="ico-btn" href="{{ path('shelf_edit', {id: shelf.id}) }}">#}
-                            {#<span class="glyphicon glyphicon-edit glyphicon-align-left" aria-hidden="true"></span>#}
-                        {#</a>#}
-                        {#{{ render(controller('AppBundle:Shelf:delete', {'id': shelf.id})) }}#}
+                        <a class="ico-btn" href="{{ path('user_edit', {id: user.id}) }}">
+                            <span class="glyphicon glyphicon-edit glyphicon-align-left" aria-hidden="true"></span>
+                        </a>
+                        {{ render(controller('AppBundle:User:delete', {'id': user.id})) }}
                     </td>
                     <td>{{ user.id }}</td>
                     <td>{{ user.name }}</td>
