--- a/src/AppBundle/Resources/views/Food/form.html.twig
+++ b/src/AppBundle/Resources/views/Food/form.html.twig
@@ -1,7 +1,11 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    {{ form_start(form, {'attr': {'class': 'category-form'} }) }}
+    <h1 class="page-header">Food create/edit</h1>
+    <div class="actions">
+        <button class="btn btn-primary" onclick="window.history.back()">Back</button>
+    </div>
+    {{ form_start(form, {'attr': {'class': 'food-form'} }) }}
         {{ form_widget(form) }}
     {{ form_end(form) }}
 {% endblock content %}
