--- a/web-src/css/styles.css
+++ b/web-src/css/styles.css
@@ -1,6 +1,9 @@
 .navbar-brand {
   height: 143px; }
 
+.navbar-fixed-top {
+  background-color: #ffffff; }
+
 .content-wr {
   margin-top: 143px; }
 
