--- a/web-src/sass/styles.scss
+++ b/web-src/sass/styles.scss
@@ -46,6 +46,10 @@ button.glyphicon {
   outline: 0;
 }
 
+.add-form {
+  display: none;
+}
+
 body {
   //@include breakpoint($bp-sm) {
   //  background-color: #9fdf9f !important;
