finished success item form ajax, header styles update

--- a/src/AppBundle/Resources/views/Item/form.html.twig
+++ b/src/AppBundle/Resources/views/Item/form.html.twig
@@ -15,7 +15,7 @@
         </div>
         {{ form_start(formItem, {'attr': {'class': 'item-form'} }) }}
         {{ form_row(formItem.description) }}
-        {{ form_row(formItem.food) }}
+        {{ form_row(formItem.food, {'attr': {'class': 'add-form-food'}}) }}
         <div class="form-group add-form-group add-form-food">
             <div class="col-sm-2"></div>
             <div class="col-sm-10">
