--- a/web-src/css/styles.css
+++ b/web-src/css/styles.css
@@ -2,10 +2,14 @@
   height: 143px; }
 
 .navbar-fixed-top {
-  background-color: #ffffff; }
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.49);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.49);
+  box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.49);
+  margin-bottom: 0; }
 
 .content-wr {
-  margin-top: 143px; }
+  margin-top: 163px; }
 
 .menu-wr {
   overflow: hidden; }
@@ -31,3 +35,6 @@ button.glyphicon {
 .form-control.add-form {
   max-width: 300px;
   display: inline-block; }
+
+.add-forms-wr {
+  display: none; }
