--- a/web-src/sass/styles.scss
+++ b/web-src/sass/styles.scss
@@ -7,10 +7,14 @@
 
 .navbar-fixed-top {
   background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.49);
+  -moz-box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.49);
+  box-shadow: 0px 2px 2px 0px rgba(0,0,0,0.49);
+  margin-bottom: 0;
 }
 
 .content-wr {
-  margin-top: $hdr-height;
+  margin-top: ($hdr-height + 20);
 }
 
 .menu-wr {
@@ -53,8 +57,8 @@ button.glyphicon {
   }
 }
 
-.add-form {
-
+.add-forms-wr {
+  display: none;
 }
 
 body {
