finished rendering ajax forms errors, added constraints, updates forms templates

--- a/web-src/sass/_variables.scss
+++ b/web-src/sass/_variables.scss
@@ -2,3 +2,5 @@ $font0: Arial, Helvetica, sans-serif;
 $font1: "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $hdr-height: 143px;
+
+$b-md: 768px;
