--- a/src/AppBundle/Resources/views/Item/form.html.twig
+++ b/src/AppBundle/Resources/views/Item/form.html.twig
@@ -24,7 +24,7 @@
             </div>
         </div>
         {{ form_row(formItem.category, {'attr': {'class': 'add-form-category'}}) }}
-        <div class="form-group add-form-group add-form-categor">
+        <div class="form-group add-form-group add-form-category">
             <div class="col-sm-2"></div>
             <div class="col-sm-10">
                 <input type="text" class="add-form add-form-category form-control" />
