--- a/src/AppBundle/Resources/views/Item/index.html.twig
+++ b/src/AppBundle/Resources/views/Item/index.html.twig
@@ -35,11 +35,11 @@
                         </td>
                         <td>{{ item.id }}</td>
                         <td>{{ item.description }}</td>
-                        <td>{{ item.food.name }}</td>
-                        <td>{{ item.category.name }}</td>
+                        <td>{{ item.food.name|default('undefined') }}</td>
+                        <td>{{ item.category.name|default('undefined') }}</td>
                         <td>{{ item.qty }}</td>
                         <td>{{ item.weight }}</td>
-                        <td>{{ item.shelf.name }}</td>
+                        <td>{{ item.shelf.name|default('undefined') }}</td>
                         <td>{{ item.createdAt | date('Y-m-d H:i') }}</td>
                         <td>{{ item.updatedAt | date('Y-m-d H:i') }}</td>
                         <td>{{ item.createdBy.name }}</td>
