--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -2,26 +2,36 @@
 
 {% block content %}
     <div class="container">
+        <h1 class="page-header">Login</h1>
         {% if error %}
             <div class="alert alert-danger" role="alert">
                 {{ error.message }}
             </div>
         {% endif %}
 
-        <form action="{{ path('login') }}" method="post">
-            <div class="row">
-                <input class="form-control control-stl" type="text" id="username" name="_username" placeholder="{{ "Your email" }}" value="{{ last_username }}" />
+        <form action="{{ path('login') }}" method="post" class="form-horizontal">
+            <div class="form-group">
+                <label class="col-sm-2 control-label required" for="username">Email</label>
+                <div class="col-sm-10">
+                    <input class="form-control control-stl" type="text" id="username" name="_username" placeholder="{{ "Your email" }}" value="{{ last_username }}" />
+                </div>
             </div>
-            <div class="row">
-                <input class="form-control control-stl" type="password" id="password" name="_password" placeholder="{{ "Your password" }}"/>
+            <div class="form-group">
+                <label class="col-sm-2 control-label required" for="password">Password</label>
+                <div class="col-sm-10">
+                    <input class="form-control control-stl" type="password" id="password" name="_password" placeholder="{{ "Your password" }}"/>
+                </div>
             </div>
             {#
                 If you want to control the URL the user
                 is redirected to on success (more details below)
                 <input type="hidden" name="_target_path" value="/account" />
             #}
-            <div class="row">
-                <button class="btn btn-default btn-primary" type="submit">Login</button>
+            <div class="form-group">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-10">
+                    <button class="btn btn-default btn-primary" type="submit">Login</button>
+                </div>
             </div>
         </form>
     </div>
