--- a/src/AppBundle/Resources/views/Shelf/form.html.twig
+++ b/src/AppBundle/Resources/views/Shelf/form.html.twig
@@ -1,11 +1,5 @@
 {% extends 'AppBundle::layout.html.twig' %}
 
 {% block content %}
-    <h1 class="page-header">Shelf create/edit</h1>
-    <div class="actions">
-        <button class="btn btn-primary" onclick="window.history.back()">Back</button>
-    </div>
-    {{ form_start(form, {'attr': {'class': 'shelf-form'} }) }}
-        {{ form_widget(form) }}
-    {{ form_end(form) }}
+    {% include '@App/includes/defaultForm.html.twig' with {'form': form, 'formHeader': 'Shelf create/edit', 'formClass': 'shelf-form' } %}
 {% endblock content %}
