--- a/src/AppBundle/Resources/views/includes/defaultForm.html.twig
+++ b/src/AppBundle/Resources/views/includes/defaultForm.html.twig
@@ -1,9 +1,11 @@
-{%  if formHeader %}
-    <h1 class="page-header">{{ formHeader }}</h1>
-    <div class="actions">
-        <button class="btn btn-primary" onclick="window.history.back()">Back</button>
-    </div>
-{% endif %}
-{{ form_start(form, {'attr': {'class': formClass} }) }}
+<div class="container">
+    {%  if formHeader %}
+        <h1 class="page-header">{{ formHeader }}</h1>
+        <div class="actions">
+            <button class="btn btn-primary" onclick="window.history.back()">Back</button>
+        </div>
+    {% endif %}
+    {{ form_start(form, {'attr': {'class': formClass} }) }}
     {{ form_widget(form) }}
-{{ form_end(form) }}
+    {{ form_end(form) }}
+</div>
