--- a/web-src/css/styles.css
+++ b/web-src/css/styles.css
@@ -8,6 +8,18 @@
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.49);
   margin-bottom: 0; }
 
+@media screen and (min-width: 768px) {
+  .navbar-right {
+    margin-right: 0; } }
+
+.navbar-toggle {
+  border-color: #ec4c4c; }
+  .navbar-toggle .icon-bar {
+    background-color: black; }
+
+.pull-right.sign-in {
+  margin-right: 15px; }
+
 .content-wr {
   margin-top: 163px; }
 
