fixed user and item form bugs, food_edit route bug and added some little updates

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -18,7 +18,7 @@
                 <div class="menu-wr">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="{{ path('homepage') }}">Home</a>
+                            <a href="{{ path('homepage') }}">Items</a>
                         </li>
                         {% if is_granted('ROLE_SUPERADMIN') %}
                             <li>
