--- a/src/AppBundle/Resources/views/Item/index.html.twig
+++ b/src/AppBundle/Resources/views/Item/index.html.twig
@@ -5,6 +5,17 @@
     <div class="actions">
         <a href="{{ path('item_new') }}" class="btn btn-primary">Create</a>
     </div>
+    <div class="search-form">
+        {{ form_start(search_form, {'attr': {'class': ''} }) }}
+        {{ form_widget(search_form) }}
+        <div class="form-group">
+            <div class="col-sm-2"></div>
+            <div class="col-sm-10">
+                <button type="submit" class="btn btn-success btn">Search</button>
+            </div>
+        </div>
+        {{ form_end(search_form) }}
+    </div>
     {% if items %}
         <div class="table-responsive">
             <table class="table table-striped">
