--- a/src/AppBundle/Resources/views/defaultForm.html.twig
+++ b/src/AppBundle/Resources/views/defaultForm.html.twig
@@ -13,7 +13,7 @@
         <div class="form-group">
             <div class="col-sm-2"></div>
             <div class="col-sm-10">
-                <button type="submit" id="admin_user_save" name="admin_user[save]" class="btn btn-success btn">Save</button>
+                <button type="submit" class="btn btn-success btn">Save</button>
             </div>
         </div>
         {{ form_end(form) }}
