--- a/src/AppBundle/Resources/views/Item/index.html.twig
+++ b/src/AppBundle/Resources/views/Item/index.html.twig
@@ -7,11 +7,19 @@
     </div>
     <div class="search-form">
         {{ form_start(search_form, {'attr': {'class': ''} }) }}
-        {{ form_widget(search_form) }}
         <div class="form-group">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-success btn">Search</button>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.description) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.food) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.category) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.shelf) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.created_start) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.created_end) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.created_by) }}</div>
+            <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">
+                <div class="btn-group">
+                    <button type="reset" value="Reset" class="btn btn-info">Reset</button>
+                    <button type="submit" class="btn btn-success">Search</button>
+                </div>
             </div>
         </div>
         {{ form_end(search_form) }}
