--- a/src/AppBundle/Resources/views/Item/index.html.twig
+++ b/src/AppBundle/Resources/views/Item/index.html.twig
@@ -17,7 +17,7 @@
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">{{ form_widget(search_form.created_by) }}</div>
             <div class="col-xs-12 col-sm-4 col-md-3 col-lg-2 col-bottom">
                 <div class="btn-group">
-                    <button type="reset" class="btn btn-info">Reset</button>
+                    <a href="#" class="form-reset btn btn-info">Reset</a>
                     <button type="submit" class="btn btn-success">Search</button>
                 </div>
             </div>
